# cuda-niggli

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  torch_build.sh
include/: niggli.cuh
src/niggli/: main.cpp  niggli.cu  niggli_torch.cu
src/niggli_torch/: __init__.py
src/torch_niggli/: __init__.py  torch_niggli.cu
