[project]
name = "torch-niggli"
version = "0.1.0"
description = "Niggli reduction for PyTorch"
authors = [{ name = "tony", email = "tony998244353@gmail.com" }]
dependencies = ["torch"]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["torch", "pybind11", "scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.scikit-build]
wheel.packages = ["src/torch_niggli"]
